base/jaeger/statefulset.k8s.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jaeger
spec:
  revisionHistoryLimit: 1
  serviceName: jaeger
  template:
    spec:
      enableServiceLinks: false
      serviceAccountName: jaeger
      securityContext:
        fsGroup: 65535
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          args:
            - --collector.zipkin.host-port=:9411
          ports:
            - name: zipkin-compact
              protocol: UDP
              containerPort: 5775
            - name: config
              protocol: TCP
              containerPort: 5778
            - name: jaeger-compact
              protocol: UDP
              containerPort: 6831
            - name: jaeger-binary
              protocol: UDP
              containerPort: 6832
            - name: zipkin
              protocol: TCP
              containerPort: 9411
            - name: jaeger-proto
              protocol: TCP
              containerPort: 14250
            - name: jaeger-thrift
              protocol: TCP
              containerPort: 14268
            - name: admin
              protocol: TCP
              containerPort: 14269
            - name: query
              protocol: TCP
              containerPort: 16686
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jaeger
