base/jaeger/virtualservice.k8s.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger
spec:
  hosts:
    - jaeger.k.seankhliao.com
  gateways:
    - jaeger
  http:
    - route:
        - destination:
            host: jaeger.jaeger.svc.cluster.local
            port:
              number: 16686
